--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">g5-test</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
@@ -10,8 +13,7 @@
           <a class="nav-link" routerLink="/table">Table</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
-	      <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+      <ul class="navbar-nav ms-auto">
         <li *ngIf="user$ | async as user; else loginTemplate" class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <img [src]="user.photoURL" alt="Avatar" class="rounded-circle" width="30" height="30"> {{ user.displayName || user.email }}
