blocks page done
totalResultCount showed after search
20 items per page
next & previous pages search added with safe change currentPage

--- a/src/app/pages/blocks/blocks.component.html
+++ b/src/app/pages/blocks/blocks.component.html
@@ -1,1 +1,41 @@
-<p>blocks works!</p>
+<div class="container mt-5">
+  <div class="row mb-3">
+    <div class="col-12">
+      <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
+        <div class="input-group">
+          <input formControlName="query" type="text" class="form-control" placeholder="Search GitHub users">
+          <button type="submit" class="btn btn-primary">Search</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div *ngIf="users.length === 0; else totalTemplate" class="col-12">
+      <p class="text-muted">No results found.</p>
+    </div>
+    <ng-template #totalTemplate>
+      <div class="col-12">
+        <p class="text-muted">Total results: {{ this.totalResultCount.toString() }}</p>
+      </div>
+    </ng-template>
+    <div *ngFor="let user of users" class="col-md-3 mb-3">
+      <div class="card" (click)="onSelectUser(user.login)" style="cursor: pointer;">
+        <img [src]="user.avatar_url" class="card-img-top" alt="{{ user.login }}">
+        <div class="card-body">
+          <h5 class="card-title">{{ user.login }}</h5>
+          <a [href]="user.html_url" target="_blank" class="btn btn-secondary btn-sm" (click)="onViewProfile($event)">View Profile</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="users.length !== 0" class="row mt-3">
+    <div class="col-md-6">
+      <p>Displaying {{ users.length }} items</p>
+    </div>
+    <div class="col-md-6 text-right">
+      <button class="btn btn-link {{ currentPage > 1 ? '' : 'hidden' }}" (click)="onPageChange('prev')"><i class="bi bi-arrow-left"></i></button>
+      <span class="mx-2">{{ currentPage }}</span>
+      <button class="btn btn-link {{ currentPage < totalPages ? '' : 'hidden' }}" (click)="onPageChange('next')"><i class="bi bi-arrow-right"></i></button>
+    </div>
+  </div>
+</div>
