--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -16,10 +16,14 @@
       <ul class="navbar-nav ms-auto">
         <li *ngIf="user$ | async as user; else loginTemplate" class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            <img [src]="user.photoURL" alt="Avatar" class="rounded-circle" width="30" height="30"> {{ user.displayName || user.email }}
+            <img *ngIf="user.photoURL; else defaultAvatar" [src]="user.photoURL" alt="Avatar" class="rounded-circle me-2" width="30" height="30">
+            <ng-template #defaultAvatar>
+              <i class="bi bi-person-circle user-icon-as-photo me-2"></i>
+            </ng-template>
+            <span class="user-text">{{ user.displayName || user.email }}</span>
           </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><button class="dropdown-item" (click)="logout()">Logout</button></li>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+            <li><button class="dropdown-item" (click)="logout()"><i class="bi bi-box-arrow-right"></i> Logout</button></li>
           </ul>
         </li>
         <ng-template #loginTemplate>
