--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/blocks">Blocks</a>
+          <a class="nav-link" routerLink="/blocks" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Blocks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/table">Table</a>
+          <a class="nav-link" routerLink="/table" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Table</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
@@ -28,7 +28,7 @@
         </li>
         <ng-template #loginTemplate>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/auth">Login</a>
+            <a class="nav-link" routerLink="/auth" routerLinkActive="active">Login</a>
           </li>
         </ng-template>
       </ul>
