--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -1,39 +1,12 @@
 <div class="container mt-3 pb-5">
-  <div class="row mb-3">
-    <div class="col-12">
-      <form [formGroup]="searchForm" (ngSubmit)="onSearch()">
-        <div class="input-group mb-3">
-          <input formControlName="query" type="text" class="form-control" placeholder="Search GitHub users">
-          <button type="submit" class="btn btn-primary">Search</button>
-        </div>
-        <div class="row mb-3">
-          <div class="col-md-6">
-            <label for="sort" class="form-label">Sort By:</label>
-            <select formControlName="sort" id="sort" class="form-select">
-              <option value="">Best Match</option>
-              <option value="followers">Followers</option>
-              <option value="repositories">Repositories</option>
-              <option value="joined">Joined</option>
-            </select>
-          </div>
-          <div class="col-md-6">
-            <label for="order" class="form-label">Order:</label>
-            <select formControlName="order" id="order" class="form-select">
-              <option value="desc">Descending</option>
-              <option value="asc">Ascending</option>
-            </select>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
+  <app-search-bar></app-search-bar>
   <div class="row">
     <div *ngIf="users.length === 0; else totalTemplate" class="col-12">
       <p class="text-muted">No results found.</p>
     </div>
     <ng-template #totalTemplate>
       <div class="col-12">
-        <p class="text-muted">Total results: {{ totalResultCount }}</p>
+        <p class="text-muted">Total results: {{ searchStateService.getTotalResultsCount() }}</p>
       </div>
     </ng-template>
     <div *ngIf="users.length > 0" class="col-12">
@@ -75,9 +48,9 @@
       <p>Displaying {{ users.length }} items</p>
     </div>
     <div class="col-md-6 text-end">
-      <button class="btn btn-link" [class.hidden]="currentPage <= 1" (click)="onPageChange('prev')"><i class="bi bi-arrow-left"></i></button>
-      <span class="mx-2">{{ currentPage }}</span>
-      <button class="btn btn-link" [class.hidden]="currentPage >= totalPages" (click)="onPageChange('next')"><i class="bi bi-arrow-right"></i></button>
+      <button class="btn btn-link" [class.hidden]="searchStateService.getCurrentPage() <= 1" (click)="onPageChange('prev')"><i class="bi bi-arrow-left"></i></button>
+      <span class="mx-2">{{ searchStateService.getCurrentPage() }}</span>
+      <button class="btn btn-link" [class.hidden]="searchStateService.getCurrentPage() >= searchStateService.getTotalPagesCount()" (click)="onPageChange('next')"><i class="bi bi-arrow-right"></i></button>
     </div>
   </div>
 </div>
